modificacion de eventos en html a js

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <header>
         <h1>Bienvenidos a Informatica MCANTON</h1>
         <h2>A continuación podrá ver los productos disponibles en nuestra tienda</h2>
-   <ul>
-    <li onclick="agregarAlCarrito(procesador)">Procesador - $50000</li>
-    <li onclick="agregarAlCarrito(mother)">Motherboard - $30000</li>
-    <li onclick="agregarAlCarrito(ram)">Memoria Ram - $10000</li>
-    <li onclick="agregarAlCarrito(placa__video)">Placa de Video - $200000</li>
-    <li onclick="agregarAlCarrito(fuente)">Fuente de Alimentacion - $10000</li>
-   </ul>
+    <ul>
+        <li id="procesador">Procesador - $50000</li>
+        <li id="mother">Motherboard - $30000</li>
+        <li id="ram">Memoria Ram - $10000</li>
+        <li id="placa_video">Placa de Video - $200000</li>
+        <li id="fuente">Fuente de Alimentacion - $10000</li>
+    </ul>    
     </header>
 
    <section class="carro">
