cambio en ciclo do-while de scriptjs y agregado de extras css

--- a/index.html
+++ b/index.html
@@ -7,28 +7,30 @@
     <link rel="stylesheet" href="./assets/styles.css">
 </head>
 <body>
-    <header>
-        <h1>Bienvenidos a Informatica MCANTON</h1>
-        <h2>A continuación podrá ver los productos disponibles en nuestra tienda</h2>
-    <ul>
-        <li id="procesador">Procesador - $50000</li>
-        <li id="mother">Motherboard - $30000</li>
-        <li id="ram">Memoria Ram - $10000</li>
-        <li id="placa_video">Placa de Video - $200000</li>
-        <li id="fuente">Fuente de Alimentacion - $10000</li>
-    </ul>    
-    </header>
+    <main>
+        <header>
+            <h1>Bienvenidos a Informatica MCANTON</h1>
+            <h2>A continuación podrá ver los productos disponibles en nuestra tienda</h2>
+        <ul>
+            <li id="procesador">Procesador - $50000</li>
+            <li id="mother">Motherboard - $30000</li>
+            <li id="ram">Memoria Ram - $10000</li>
+            <li id="placa_video">Placa de Video - $200000</li>
+            <li id="fuente">Fuente de Alimentacion - $10000</li>
+        </ul>    
+        </header>
 
-   <section class="carro">
-        <h2>Carrito</h2>
-        <h3>Haz click sobre la imagen si quieres eliminar el producto del carrito</h3>
-        <div id="carrito"></div>
-        <h2>Saldo disponible en su billetera: $<span id="valor"></span></h2>
-    </section>   
-    <section class="botones"> 
-        <button id="btnBilletera" class="boton__billetera">Añadir saldo a su billetera</button>
-        <button id="btnComprar" class="boton__comprar">Comprar</button>
-   </section>
+        <section class="carro">
+            <h2>Carrito</h2>
+            <h3>Haz click sobre la imagen si quieres eliminar el producto del carrito</h3>
+            <div id="carrito"></div>
+            <h2>Saldo disponible en su billetera: $<span id="valor"></span></h2>
+        </section>   
+        <section class="botones"> 
+            <button id="btnBilletera" class="boton__billetera">Añadir saldo a su billetera</button>
+            <button id="btnComprar" class="boton__comprar">Comprar</button>
+        </section>
+    </main>
    
    
 
