agregado de iconos y correccion de detalles html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFORMATICA MCANTON</title>
     <link rel="stylesheet" href="./assets/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <main>
@@ -21,14 +22,18 @@
         </header>
 
         <section class="carro">
-            <h2>Carrito</h2>
+            <h2><i class="bi bi-cart"></i> CARRITO</h2>
             <h3>Haz click sobre la imagen si quieres eliminar el producto del carrito</h3>
             <div id="carrito"></div>
             <h2>Saldo disponible en su billetera: $<span id="valor"></span></h2>
         </section>   
         <section class="botones"> 
-            <button id="btnBilletera" class="boton__billetera">Añadir saldo a su billetera</button>
-            <button id="btnComprar" class="boton__comprar">Comprar</button>
+            <button id="btnBilletera" class="boton__billetera">
+                <i class="bi bi-wallet"></i> AÑADIR SALDO A SU BILLETERA
+            </button>
+            <button id="btnComprar" class="boton__comprar">
+                <i class="bi bi-currency-dollar"></i> COMPRAR
+            </button>
         </section>
     </main>
    
