--- a/carrito.html
+++ b/carrito.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INFORMATICA MCANTON</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./assets/styles.css">    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" href="./assets/styles.css">
+    <title>INFORMATICA MCANTON - CARRITO</title>
 </head>
-<body class="">
+<body>
     <header class="topheader">
         <nav class="topnav">
-            <a href="./index.html"> INFORMATICA MCANTON</a>
+            <a href="./index.html">INFORMATICA MCANTON</a>
             <button class="open-menu" aria-label="Abrir menú">
                 <img src="./img/hamburger-icon.svg" alt="abrir menu">
             </button>
@@ -19,12 +21,12 @@
                 <button class="close-menu" aria-label="Cerrar menú">
                     <img src="./img/close-icon.svg" alt="cerrar menu">
                 </button>
-                <li><a href="./index.html" class="selected">Inicio</a></li>
                 <li>
-                    <a class="boton-menu boton-carrito" href="./carrito.html">
-                        <i class="bi bi-cart-fill"></i> Carrito  <span id="numerito" class="numerito">0</span>
+                    <a class="boton-menu boton-volver" href="./index.html">
+                        Seguir comprando
                     </a>
                 </li>
+                <li><a href="./carrito.html" class="selected">Carrito</a></li>
                 <!-- Btn darkMode -->
                 <li class="li-switch">
                     <button class="switch" id="switch">
@@ -37,7 +39,7 @@
                         <a target="_blank" href="" class="close-menu">
                             <img src="./img/github.svg" alt="github profile"/>
                         </a>
-                        <a target="_blank" href="">
+                        <a target="_blank" href="" class="close-menu">
                             <img src="./img/linkedin.svg" alt="linkedin profile"/>
                         </a>
                     </li>
@@ -45,36 +47,38 @@
             </ul>
         </nav>
     </header>
-    <hero>
-        <h1>Bienvenidos a Informatica MCANTON</h1>
-        <h2>A continuación podrá ver los productos disponibles en nuestra tienda</h2>
-        <div id="carousel" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">            
-              <div class="carousel-item active" data-bs-interval="3000">
-                <img src="./img/fuente.jpg" class="d-block w-75 mx-auto" alt="slide1">
-              </div> 
-              <div class="carousel-item" data-bs-interval="3000">
-                <img src="./img/mother.jpg" class="d-block w-75 mx-auto" alt="slide2">
-              </div>
-              <div class="carousel-item" data-bs-interval="3000">
-                <img src="./img/placavideo.jpg" class="d-block w-75 mx-auto" alt="slide3">
-              </div> 
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carousel"  data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Anterior</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carousel"  data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Siguiente</span>
-            </button>
-          </div>  
-    </hero>
-    <main>
 
+    <main>
+        <div class="horizontal-padding vertical-padding">
+            <div class="tituloGeneral">
+                <h1>CARRITO</h1>
+            </div>
+            <div class="contenedor-carrito">
+                <p id="carrito-vacio" class="carrito-vacio">Tu carrito está vacío.</p>
+
+                <div id="carrito-productos" class="carrito-productos disabled">
+                    
+                </div>
+
+                <div id="carrito-acciones" class="carrito-acciones disabled">
+                    <div class="carrito-acciones-izquierda">
+                        <button id="carrito-acciones-vaciar" class="carrito-acciones-vaciar">Vaciar carrito</button>
+                    </div>
+                    <div class="carrito-acciones-derecha">
+                        <div class="carrito-acciones-total">
+                            <p>Total:</p>
+                            <p id="total">$0</p>
+                        </div>
+                        <button id="carrito-acciones-comprar" class="carrito-acciones-comprar">Comprar ahora</button>
+                    </div>
+                </div>
+
+                <p id="carrito-comprado" class="carrito-comprado disabled">Muchas gracias por tu compra.</p>
+
+            </div>
+        </div>
     </main>
-   
-   
+    
     <footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
         <p class="px-3  pt-3">iNFORMATICA MCANTON &copy; Todos Los Derechos Reservados</p>
         <div id="iconos" >
@@ -83,6 +87,7 @@
             <a href="https://instagram.com/coderhouse"><i class="bi bi-instagram"></i></a>  
         </div>
     </footer>   
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/b74834922d.js"></script>
