partials de estilos, agregado de drakmode js, modif htmls

--- a/carrito.html
+++ b/carrito.html
@@ -23,10 +23,13 @@
                 </button>
                 <li>
                     <a class="boton-menu boton-volver" href="./index.html">
-                        Seguir comprando
+                        Volver a productos
                     </a>
                 </li>
-                <li><a href="./carrito.html" class="selected">Carrito</a></li>
+                <li><a href="./carrito.html" class="selected">
+                    <i class="bi bi-cart-fill"></i> Carrito  <span id="numerito" class="numerito">0</span>
+                </a>
+            </li>
                 <!-- Btn darkMode -->
                 <li class="li-switch">
                     <button class="switch" id="switch">
