--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         </nav>
     </header>
     <hero>
+        <div class="tituloGeneral">
         <h1>Bienvenidos a Informatica MCANTON</h1>
-        <h2>A continuación podrá ver los productos disponibles en nuestra tienda</h2>
+        </div>
         <div id="carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">            
               <div class="carousel-item active" data-bs-interval="3000">
