--- a/carrito.html
+++ b/carrito.html
@@ -13,7 +13,7 @@
 <body>
     <header class="topheader">
         <nav class="topnav">
-            <a href="./index.html">INFORMATICA MCANTON</a>
+            <a href="./index.html" class="logo">INFORMATICA MCANTON</a>
             <button class="open-menu" aria-label="Abrir menú">
                 <img src="./img/hamburger-icon.svg" alt="abrir menu">
             </button>
@@ -27,7 +27,7 @@
                     </a>
                 </li>
                 <li><a href="./carrito.html" class="selected">
-                    <i class="bi bi-cart-fill"></i> Carrito  <span id="numerito" class="numerito">0</span>
+                    <i class="bi bi-cart-fill"></i> Carrito 
                 </a>
             </li>
                 <!-- Btn darkMode -->
@@ -82,14 +82,23 @@
         </div>
     </main>
     
-    <footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
-        <p class="px-3  pt-3">iNFORMATICA MCANTON &copy; Todos Los Derechos Reservados</p>
-        <div id="iconos" >
-            <a href="https://facebook.com/coderhouse"><i class="bi bi-facebook"></i></a>
-            <a href="https://twitter.com/coderhouse"><i class="bi bi-twitter"></i></a>
-            <a href="https://instagram.com/coderhouse"><i class="bi bi-instagram"></i></a>  
+<!-- footer -->
+<footer class="footerContainer">
+    <div class="grupo1">
+            <div class="cajaFooter">
+                <h5>NUESTRAS REDES</h5>
+                <div class="redes">
+                    <a target="_blank" href="" class="fa fa-facebook"></a>
+                    <a target="_blank" href="" class="fa fa-twitter"></a>
+                    <a target="_blank" href="" class="fa fa-instagram"></a>
+                </div>
+            </div>
         </div>
-    </footer>   
+        <div class="grupo2">
+            <small>&copy; 2024 <b>Informatica MCANTON</b> - Todos los Derechos Reservados.</small>
+        </div>
+    </footer>
+    <!-- footer -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
