Agregado de mediasqueries, iconos con href

--- a/index.html
+++ b/index.html
@@ -36,13 +36,19 @@
                 </li>
                 <div class="close-menu-social">
                     <li>
-                        <a target="_blank" href="" class="close-menu">
+                        <a target="_blank" href="https://github.com/MartinCanton" class="close-menu">
                             <img src="./img/github.svg" alt="github profile"/>
                         </a>
-                        <a target="_blank" href="" class="close-menu">
+                        <a target="_blank" href="https://www.linkedin.com/in/mart%C3%ADn-cant%C3%B3n-294253260/" class="close-menu">
                             <img src="./img/linkedin.svg" alt="linkedin profile"/>
                         </a>
-                    </li>
+                        <a target="_blank" href="https://www.facebook.com/Tincho.Canton" class="close-menu">
+                            <img src="./img/facebook.svg" alt="facebook profile"/>
+                        </a>
+                        <a target="_blank" href="#" class="close-menu">
+                            <img src="./img/twitter.svg" alt="twitter profile"/>
+                        </a>
+                    </li>    
                 </div>
             </ul>
         </nav>
@@ -119,9 +125,9 @@
             <div class="cajaFooter">
                 <h5>NUESTRAS REDES</h5>
                 <div class="redes">
-                    <a target="_blank" href="" class="fa fa-facebook"></a>
-                    <a target="_blank" href="" class="fa fa-twitter"></a>
-                    <a target="_blank" href="" class="fa fa-instagram"></a>
+                    <a target="_blank" href="https://www.facebook.com/Coderhouse/" class="fa fa-facebook"></a>
+                    <a target="_blank" href="https://twitter.com/coderhouse?lang=es" class="fa fa-twitter"></a>
+                    <a target="_blank" href="https://www.instagram.com/coderhouse/?hl=es" class="fa fa-instagram"></a>
                 </div>
             </div>
         </div>
