--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a target="_blank" href="https://www.facebook.com/Tincho.Canton" class="close-menu">
                             <img src="./img/facebook.svg" alt="facebook profile"/>
                         </a>
-                        <a target="_blank" href="#" class="close-menu">
+                        <a target="_blank" href="" class="close-menu">
                             <img src="./img/twitter.svg" alt="twitter profile"/>
                         </a>
                     </li>    
